@@ -2,31 +2,12 @@ package io.lionweb.client.inmemory;
 
 import io.lionweb.LionWebVersion;
 import io.lionweb.client.api.*;
-import io.lionweb.client.delta.CommandSource;
 import io.lionweb.client.delta.DeltaChannel;
-import io.lionweb.client.delta.DeltaCommandReceiver;
-import io.lionweb.client.delta.DeltaQueryReceiver;
-import io.lionweb.client.delta.messages.DeltaCommand;
-import io.lionweb.client.delta.messages.DeltaQuery;
-import io.lionweb.client.delta.messages.DeltaQueryResponse;
-import io.lionweb.client.delta.messages.commands.children.AddChild;
-import io.lionweb.client.delta.messages.commands.children.DeleteChild;
-import io.lionweb.client.delta.messages.commands.properties.ChangeProperty;
-import io.lionweb.client.delta.messages.commands.references.AddReference;
-import io.lionweb.client.delta.messages.events.ErrorEvent;
-import io.lionweb.client.delta.messages.events.StandardErrorCode;
-import io.lionweb.client.delta.messages.events.children.ChildAdded;
-import io.lionweb.client.delta.messages.events.children.ChildDeleted;
-import io.lionweb.client.delta.messages.events.properties.PropertyChanged;
-import io.lionweb.client.delta.messages.events.references.ReferenceAdded;
-import io.lionweb.client.delta.messages.queries.partitcipations.SignOnRequest;
-import io.lionweb.client.delta.messages.queries.partitcipations.SignOnResponse;
 import io.lionweb.model.ClassifierInstance;
 import io.lionweb.model.Node;
 import io.lionweb.serialization.AbstractSerialization;
 import io.lionweb.serialization.data.SerializationChunk;
 import io.lionweb.serialization.data.SerializedClassifierInstance;
-import io.lionweb.serialization.data.SerializedReferenceValue;
 import io.lionweb.utils.ValidationResult;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
@@ -49,12 +30,12 @@ import org.jetbrains.annotations.Nullable;
  */
 public class InMemoryServer {
 
-  private static final float DEFAULT_HASH_LOAD_FACTOR = 0.75f;
-
   /** Internally we store the data separately for each repository. */
   private final Map<String, RepositoryData> repositories = new ConcurrentHashMap<>();
 
   private final boolean materializeClassifierIndex;
+
+  private final ParticipationManager participationManager = new ParticipationManager();
 
   public InMemoryServer() {
     this(true);
@@ -63,8 +44,6 @@ public class InMemoryServer {
   public InMemoryServer(boolean materializeClassifierIndex) {
     this.materializeClassifierIndex = materializeClassifierIndex;
   }
-
-  private int nextParticipationId = 1;
 
   public @NotNull RepositoryConfiguration getRepositoryConfiguration(
       @NotNull String repositoryName) {
@@ -166,7 +145,7 @@ public class InMemoryServer {
     Objects.requireNonNull(nodeId, "NodeId should not be null");
     Objects.requireNonNull(serialization, "Serialization should not be null");
     List<SerializedClassifierInstance> serializedNodes =
-        retrieve(repositoryName, Arrays.asList(nodeId), 1);
+        retrieve(repositoryName, List.of(nodeId), 1);
     if (serializedNodes.isEmpty()) {
       return null;
     }
@@ -265,173 +244,18 @@ public class InMemoryServer {
 
   public void monitorDeltaChannel(String repositoryName, @NotNull DeltaChannel channel) {
     Objects.requireNonNull(channel, "Channel should not be null");
-    channel.registerCommandReceiver(new DeltaCommandReceiverImpl(repositoryName, channel));
-    channel.registerQueryReceiver(new DeltaQueryReceiverImpl(repositoryName, channel));
-  }
-
-  private class DeltaQueryReceiverImpl implements DeltaQueryReceiver {
-
-    private String repositoryName;
-    private DeltaChannel channel;
-
-    private DeltaQueryReceiverImpl(String repositoryName, DeltaChannel channel) {
-      this.repositoryName = repositoryName;
-      this.channel = channel;
-    }
-
-    @Override
-    public DeltaQueryResponse receiveQuery(DeltaQuery query) {
-      if (query instanceof SignOnRequest) {
-        SignOnRequest signOnRequest = (SignOnRequest) query;
-        return new SignOnResponse(signOnRequest.queryId, "participation-" + nextParticipationId++);
-      }
-      throw new UnsupportedOperationException("Not supported yet.");
-    }
-  }
-
-  private class DeltaCommandReceiverImpl implements DeltaCommandReceiver {
-    private String repositoryName;
-    private DeltaChannel channel;
-
-    private DeltaCommandReceiverImpl(String repositoryName, DeltaChannel channel) {
-      this.repositoryName = repositoryName;
-      this.channel = channel;
-    }
-
-    @Override
-    public void receiveCommand(String participationId, DeltaCommand command) {
-      CommandSource source = new CommandSource(participationId, command.commandId);
-      if (command instanceof ChangeProperty) {
-        ChangeProperty changeProperty = (ChangeProperty) command;
-        RepositoryData repositoryData = getRepository(repositoryName);
-        List<SerializedClassifierInstance> retrieved = new ArrayList<>();
-        try {
-          repositoryData.retrieve(changeProperty.node, 0, retrieved);
-        } catch (IllegalArgumentException e) {
-          channel.sendEvent(
-              sequenceNumber ->
-                  new ErrorEvent(
-                      sequenceNumber,
-                      StandardErrorCode.UNKNOWN_NODE,
-                      "Node with id " + changeProperty.node + " not found"));
-          return;
-        }
-        SerializedClassifierInstance node = retrieved.get(0);
-        String oldValue = node.getPropertyValue(((ChangeProperty) command).property);
-        retrieved.get(0);
-        node.setPropertyValue(((ChangeProperty) command).property, changeProperty.newValue);
-        String newValue = node.getPropertyValue(((ChangeProperty) command).property);
-        channel.sendEvent(
-            sequenceNumber ->
-                new PropertyChanged(
-                        sequenceNumber, node.getID(), changeProperty.property, newValue, oldValue)
-                    .addSource(source));
-        return;
-      } else if (command instanceof AddChild) {
-        AddChild addChild = (AddChild) command;
-        RepositoryData repositoryData = getRepository(repositoryName);
-        List<SerializedClassifierInstance> retrieved = new ArrayList<>();
-        try {
-          repositoryData.retrieve(addChild.parent, 0, retrieved);
-        } catch (IllegalArgumentException e) {
-          channel.sendEvent(
-              sequenceNumber ->
-                  new ErrorEvent(
-                      sequenceNumber,
-                      StandardErrorCode.UNKNOWN_NODE,
-                      "Node with id " + addChild.parent + " not found"));
-          return;
-        }
-        SerializedClassifierInstance node = retrieved.get(0);
-        repositoryData.store(addChild.newChild.getClassifierInstances());
-        String childId =
-            addChild.newChild.getClassifierInstances().stream()
-                .filter(n -> n.getParentNodeID().equals(addChild.parent))
-                .findFirst()
-                .get()
-                .getID();
-        node.addChild(addChild.containment, childId, addChild.index);
-        channel.sendEvent(
-            sequenceNumber ->
-                new ChildAdded(
-                        sequenceNumber,
-                        addChild.parent,
-                        addChild.newChild,
-                        addChild.containment,
-                        addChild.index)
-                    .addSource(source));
-        return;
-      } else if (command instanceof DeleteChild) {
-        DeleteChild deleteChild = (DeleteChild) command;
-        RepositoryData repositoryData = getRepository(repositoryName);
-        List<SerializedClassifierInstance> retrieved = new ArrayList<>();
-        try {
-          repositoryData.retrieve(deleteChild.parent, 0, retrieved);
-        } catch (IllegalArgumentException e) {
-          channel.sendEvent(
-              sequenceNumber ->
-                  new ErrorEvent(
-                      sequenceNumber,
-                      StandardErrorCode.UNKNOWN_NODE,
-                      "Node with id " + deleteChild.parent + " not found"));
-          return;
-        }
-        SerializedClassifierInstance node = retrieved.get(0);
-        channel.sendEvent(
-            sequenceNumber ->
-                new ChildDeleted(
-                        sequenceNumber,
-                        deleteChild.parent,
-                        deleteChild.deletedChild,
-                        java.util.Collections.emptyList(),
-                        deleteChild.index,
-                        deleteChild.containment)
-                    .addSource(source));
-        return;
-      } else if (command instanceof AddReference) {
-        AddReference addReference = (AddReference) command;
-        RepositoryData repositoryData = getRepository(repositoryName);
-        List<SerializedClassifierInstance> retrieved = new ArrayList<>();
-        try {
-          repositoryData.retrieve(addReference.parent, 0, retrieved);
-        } catch (IllegalArgumentException e) {
-          channel.sendEvent(
-              sequenceNumber ->
-                  new ErrorEvent(
-                      sequenceNumber,
-                      StandardErrorCode.UNKNOWN_NODE,
-                      "Node with id " + addReference.parent + " not found"));
-          return;
-        }
-        SerializedClassifierInstance node = retrieved.get(0);
-        node.addReferenceValue(
-            addReference.reference,
-            addReference.index,
-            new SerializedReferenceValue.Entry(
-                addReference.newReference, addReference.newResolveInfo));
-        channel.sendEvent(
-            sequenceNumber ->
-                new ReferenceAdded(
-                        sequenceNumber,
-                        addReference.parent,
-                        addReference.reference,
-                        addReference.index,
-                        addReference.newReference,
-                        addReference.newResolveInfo)
-                    .addSource(source));
-        return;
-      }
-
-      throw new UnsupportedOperationException(
-          "Unsupported command type: " + command.getClass().getName());
-    }
+    channel.registerCommandReceiver(
+        new DeltaCommandReceiverImpl(repositoryName, channel, participationManager, this));
+    channel.registerQueryReceiver(
+        new DeltaQueryReceiverImpl(repositoryName, participationManager, this));
   }
 
   //
-  // Private methods
+  // Package-protected methods
   //
 
-  private @NotNull RepositoryData getRepository(@NotNull String repositoryName) {
+  @NotNull
+  RepositoryData getRepository(@NotNull String repositoryName) {
     Objects.requireNonNull(repositoryName, "RepositoryName should not be null");
     RepositoryData repositoryData = repositories.get(repositoryName);
     if (repositoryData == null) {
